// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders caption applying style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(28, 27, 31, 1)",
      },
      Object {
        "textAlign": "left",
      },
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 0.54)",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          Object {
            "color": "#f44336",
            "fontSize": 20,
          },
        ],
      ],
    ]
  }
>
  Big and red caption
</Text>
`;

exports[`renders caption with children as content 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(28, 27, 31, 1)",
      },
      Object {
        "textAlign": "left",
      },
      Array [
        Object {
          "textAlign": "left",
        },
        Object {
          "color": "rgba(28, 27, 31, 0.54)",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
      ],
    ]
  }
>
  Caption content
</Text>
`;
